# remote2mac

./: LICENSE  README.md  README.zh-CN.md  pyproject.toml
launchd/: io.remote2mac.agent.plist
src/remote2mac/: __init__.py  app.py  auth.py  cli.py  config.py  models.py  runtime.py
src/remote2mac/services/: __init__.py  bootstrap.py  exec_runner.py
tests/: __init__.py  conftest.py  test_api.py  test_bootstrap.py  test_cli.py  test_config.py  test_exec_runner.py
