[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "remote2mac"
version = "0.1.0"
description = "Whitelist-based bridge from remote processes to local macOS binaries"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
    "cryptography>=42.0.0",
]
signing = [
    "cryptography>=42.0.0",
]

[project.scripts]
remote2mac = "remote2mac.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/remote2mac"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
